--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "wt-cli",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "vue": "bin/wt"
+    "wt": "bin/wt"
   },
   "repository": {
     "type": "git",
