--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
   "version": "2.1.22",
-  "preScriptFilePath": "/Users/xuhaifeng/IT/10_YC/atinc/wtdock/src/server/test.sh",
-  "scriptFilePath": "/Users/xuhaifeng/IT/10_YC/atinc/wtdock/src/server/test.sh node init",
-  "configScriptFilePath": "/Users/xuhaifeng/IT/10_YC/atinc/wtdock/src/server/test.sh",
-  "postScriptFilePath": "/Users/xuhaifeng/IT/10_YC/atinc/wtdock/src/server/test.sh",
+  "scriptsRootDir": "../bash",
+  "preScript": "/pre-upgrade.sh --action=pull --images=\"{{images}}\"",
+  "upgradeScript": "/update-db.sh --version={{version}}",
+  "configScript": "/update-conf.sh --config {{configFilePath}}",
+  "postScript": "/post-upgrade.sh --services=\"{{services}}\"",
   "dockerBaseHost": "http://docker.worktile.com",
   "token": "7dd896fe-6da5-4e06-8cad-b1bab8e1cf8f"
 }
