--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "koa-bodyparser": "^2.2.0",
     "koa-json": "^1.1.3",
     "koa-router": "^5.4.0",
-    "pm2": "^1.1.3"
+    "koa-send": "^3.2.0",
+    "lodash": "^4.15.0",
+    "pm2": "^1.1.3",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "request": "^2.74.0"
