--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
   "scriptsRootDir": "../bash",
   "dockerBaseHost": "http://docker.worktile.com",
   "token": "7dd896fe-6da5-4e06-8cad-b1bab8e1cf8f",
-  "preScript": "/pre-upgrade.sh --action=pull --images=\"{{images}}\"",
+  "preScript": "/pre-upgrade.sh --images=\"{{images}}\"",
   "upgradeScript": "/update-db.sh --version={{version}}",
   "configScript": "/update-conf.sh --config {{configFilePath}}",
   "postScript": "/post-upgrade.sh --services=\"{{services}}\""
